Fix top formatting and make resume visible

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -155,7 +155,7 @@ html {
 }
 
 body {
-  margin: 0px;
+  margin-top: 33px;
   min-height: 100%;
   width: 100%;
 }
